List.of() -> Collections.emptyList() 명시적으로 변경